k8s/next-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app
  namespace: gamex
spec:
  selector:
    app: next-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app
  namespace: gamex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
        - name: next-app
          image: stefanteof/gamex-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket: { port: 3000 }
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 3000 }
            initialDelaySeconds: 15
            periodSeconds: 20
