k8s/next-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamex-ingress
  namespace: gamex
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: gamex.localtest.me
    http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-app
            port:
              number: 3000
